[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-tutorial"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Yudong.zhu", email = "yudong8.zhu@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Yudong.zhu/python-tutorial#readme"
Issues = "https://github.com/Yudong.zhu/python-tutorial/issues"
Source = "https://github.com/Yudong.zhu/python-tutorial"

[tool.hatch.version]
path = "src/python_tutorial/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/python_tutorial tests}"

[tool.coverage.run]
source_pkgs = ["python_tutorial", "tests"]
branch = true
parallel = true
omit = [
  "src/python_tutorial/__about__.py",
]

[tool.coverage.paths]
python_tutorial = ["src/python_tutorial", "*/python-tutorial/src/python_tutorial"]
tests = ["tests", "*/python-tutorial/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
